--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Пинк</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Пинк</title>
+</head>
 
-  </body>
+<body>
+  <header class="page-header">
+    <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
+    <a class="page-header__logo">
+      <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
+        alt="Пинк - раскрась серые будни!">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a>Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="photo.html">Фотографии</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Конкурс</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">HTML Academy</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page-main">
+    <h2 class="visually-hidden">Взгляните на жизнь иначе!</h2>
+    <img class="page-main__main-image" src="img/iphone-hand-mobile@1x.png" width="258" height="286"
+      alt="Взгляните на жизнь иначе!">
+    <article class="download-app">
+      <h3 class="visually-hidden">Скачай приложение</h3>
+      <button class="download-app__download">Скачать приложение</button>
+      <a href="appstore.html"><span class="visually-hidden">Скачать с appstore</span></a>
+      <a href="android.html"><span class="visually-hidden">Скачать с play market</span></a>
+      <a href="windows.html"><span class="visually-hidden">Скачать с microsoft store</span></a>
+      <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+    </article>
+    <section class="advantages">
+      <p class="advantages__slogan slogan-question">Устали от серости мегаполиса?
+
+        Нам есть, что вам
+        предложить!</p>
+      <p class="advantages__slogan slogan-answer">Нам есть, что вам предложить!</p>
+      <h2 class="visually-hidden">Наши преимущества</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <h3 class="advantages__title">Поднимает настроение</h3>
+          <p class="advantages__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
+            несколько кликов!</p>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__title">Меняет мир вокруг</h3>
+          <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
+            усилить эффект</p>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__title">Заводит новых друзей</h3>
+          <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
+            новых</p>
+        </li>
+      </ul>
+    </section>
+    <section class="reviews">
+      <h3 class="visually-hidden">Отзывы пользователей</h3>
+      <img class="reviews__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Отзывы">
+    </section>
+  </main>
+
+</body>
+
 </html>
