--- a/source/form.html
+++ b/source/form.html
@@ -33,8 +33,70 @@
     </nav>
   </header>
   <main class="page-main">
-    <section class="competition">
-      <h1 class="competition__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+    <h1 class="visually-hidden">Конкурс от Pink</h1>
+    <section class="intro">
+      <h2 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
+    </section>
+    <section class="form">
+      <p class="form__text">
+        Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста,
+        заполните форму ниже:
+      </p>
+      <!-- Форма -->
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <fieldset class="form__name">
+          <label class="form__text-label" for="surname-field">Фамилия:</label>
+          <input class="form__text-field" type="text" name="surname" id="surname-field" placeholder="Укажите фамилию *"
+            required>
+          <label class="form__text-label" for="name-field">Имя:</label>
+          <input class="form__text-field" type="text" name="name" id="name-field" placeholder="Введите ваше имя *"
+            required>
+          <label class="form__text-label" for="middle-name-field">Отчество:</label>
+          <input class="form__text-field" type="text" name="middle-name" id="middle-name-field"
+            placeholder="Ну и отчество тоже">
+        </fieldset>
+        <fieldset class="form__achieve">
+          <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
+          <input class="form__achieve-input" type="checkbox" name="check1" id="check1" checked>
+          <label class="form__achieve-label" for="check1">Сделал селфи с акулой</label>
+          <input class="form__achieve-input" type="checkbox" name="check2" id="check2" checked>
+          <label class="form__achieve-label" for="check2">Обгорел на пляже</label>
+          <input class="form__achieve-input" type="checkbox" name="check3" id="check3">
+          <label class="form__achieve-label" for="check3">Видел Чака Норриса</label>
+          <input class="form__achieve-input" type="checkbox" name="check4" id="check4">
+          <label class="form__achieve-label" for="check4">Накупил сувениров</label>
+          <input class="form__achieve-input" type="checkbox" name="check5" id="check5" checked>
+          <label class="form__achieve-label" for="check5">Удержал башню</label>
+          <input class="form__achieve-input" type="checkbox" name="check6" id="check6">
+          <label class="form__achieve-label" for="check6">Разгромил отель</label>
+        </fieldset>
+        <fieldset class="form__contacts">
+          <legend class="form__legend">Контактная информация</legend>
+          <label class="form__text-label" for="phone-field">Номер телефона</label>
+          <input class="form__text-field form__text-field--phone" type="tel" name="phone" id="phone-field"
+            placeholder="Номер, пожалуйста" pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}">
+          <label class="form__text-label" for="email-field">Адрес почты</label>
+          <input class="form__text-field form__text-field--letter" type="email" name="email" id="email-field"
+            placeholder="Введите почту *" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" required>
+        </fieldset>
+        <fieldset class="form__aplication">
+          <legend class="form__legend">С каким приложением путешествовали?</legend>
+          <input class="form__radio-field" type="radio" name="app" id="ios-field" value="ios" checked>
+          <label class="form__radio-label" for="ios-field">Pink для iOS</label>
+          <input class="form__radio-field" type="radio" name="app" id="android-field" value="android">
+          <label class="form__radio-label" for="android-field">Pink на Android</label>
+          <input class="form__radio-field" type="radio" name="app" id="windows-field" value="windows">
+          <label class="form__radio-label" for="windows-field">Windows Phone</label>
+        </fieldset>
+        <fieldset class="form__emotions">
+          <legend class="form__legend">Опишите свои эмоции</legend>
+          <textarea class="form__emotions-text"
+            placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+        </fieldset>
+        <button class="form__button" type="submit">Отправить форму</button>
+        <small class="form__notes"><sup>*</sup> — обязательные для заполнения поля</small>
+      </form>
+
     </section>
   </main>
   <footer class="page-footer">
