--- a/source/form.html
+++ b/source/form.html
@@ -58,17 +58,17 @@
         <fieldset class="form__achieve">
           <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
           <input class="form__achieve-input" type="checkbox" name="check1" id="check1" checked>
-          <label class="form__achieve-label" for="check1">Сделал селфи с акулой</label>
+          <label class="form__text-label" for="check1">Сделал селфи с акулой</label>
           <input class="form__achieve-input" type="checkbox" name="check2" id="check2" checked>
-          <label class="form__achieve-label" for="check2">Обгорел на пляже</label>
+          <label class="form__text-label" for="check2">Обгорел на пляже</label>
           <input class="form__achieve-input" type="checkbox" name="check3" id="check3">
-          <label class="form__achieve-label" for="check3">Видел Чака Норриса</label>
+          <label class="form__text-label" for="check3">Видел Чака Норриса</label>
           <input class="form__achieve-input" type="checkbox" name="check4" id="check4">
-          <label class="form__achieve-label" for="check4">Накупил сувениров</label>
+          <label class="form__text-label" for="check4">Накупил сувениров</label>
           <input class="form__achieve-input" type="checkbox" name="check5" id="check5" checked>
-          <label class="form__achieve-label" for="check5">Удержал башню</label>
+          <label class="form__text-label" for="check5">Удержал башню</label>
           <input class="form__achieve-input" type="checkbox" name="check6" id="check6">
-          <label class="form__achieve-label" for="check6">Разгромил отель</label>
+          <label class="form__text-label" for="check6">Разгромил отель</label>
         </fieldset>
         <fieldset class="form__contacts">
           <legend class="form__legend">Контактная информация</legend>
@@ -88,11 +88,8 @@
           <input class="form__radio-field" type="radio" name="app" id="windows-field" value="windows">
           <label class="form__radio-label" for="windows-field">Windows Phone</label>
         </fieldset>
-        <fieldset class="form__emotions">
-          <legend class="form__legend">Опишите свои эмоции</legend>
-          <textarea class="form__emotions-text"
-            placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-        </fieldset>
+        <label class="form__text-label" for="emotions-area">Опишите свои эмоции</label>
+        <textarea class="form__emotions" placeholder="Можно прям в красках, не стесняясь в выражениях" id="emotions-area"></textarea>
         <button class="form__button" type="submit">Отправить форму</button>
         <small class="form__notes"><sup>*</sup> — обязательные для заполнения поля</small>
       </form>
