--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
       alt="Взгляните на жизнь иначе!">
     <article class="download-app">
       <h3 class="visually-hidden">Скачай приложение</h3>
-      <button class="download-app__download">Скачать приложение</button>
+      <button class="download-app__download button">Скачать приложение</button>
       <a href="appstore.html"><span class="visually-hidden">Скачать с appstore</span></a>
       <a href="android.html"><span class="visually-hidden">Скачать с play market</span></a>
       <a href="windows.html"><span class="visually-hidden">Скачать с microsoft store</span></a>
@@ -129,28 +129,28 @@
     </section>
     <section class="map">
     </section>
-    <footer class="page-footer page-footer--hide">
-      <img class="page-footer__logo" src="img/logo-pink-blue-mobile.svg" width="147" height="40" alt="логитип сайта">
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Наш канал на
-              YouTube</a>
-          </li>
-        </ul>
-        <div class="page-footer__copyright copyright">
-          <p class="copyright__text">Разработано:</p>
-          <a class="copyright__image" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </div>
-      </div>
-    </footer>
   </main>
+  <footer class="page-footer page-footer--hide">
+    <img class="page-footer__logo" src="img/logo-pink-blue-mobile.svg" width="147" height="40" alt="логитип сайта">
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Наш канал на
+            YouTube</a>
+        </li>
+      </ul>
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__text">Разработано:</p>
+        <a class="copyright__image" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
