filter modfier added

--- a/source/photo.html
+++ b/source/photo.html
@@ -134,7 +134,7 @@
       <h3 class="post-photo__title">Затмите их всех!
       Выкладывайте все, что накопилось в телефоне!</h3>
       <img class="post-photo__image" src="https://via.placeholder.com/150x150" width="150" height="150" alt="Фото для размещения">
-      <div class="post-photo__filter"></div>
+      <div class="post-photo__filter--switchable"></div>
       <button class="post-photo__post button">Запостить</button>
       <button class="post-photo__cancel button">Отмена</button>
     </section>
