--- a/source/index.html
+++ b/source/index.html
@@ -33,17 +33,20 @@
     </nav>
   </header>
   <main class="page-main">
-    <h2 class="visually-hidden">Взгляните на жизнь иначе!</h2>
-    <img class="page-main__main-image" src="img/iphone-hand-mobile@1x.png" width="258" height="286"
-      alt="Взгляните на жизнь иначе!">
-    <article class="download-app">
-      <h3 class="visually-hidden">Скачай приложение</h3>
-      <button class="download-app__download button">Скачать приложение</button>
-      <a href="appstore.html"><span class="visually-hidden">Скачать с appstore</span></a>
-      <a href="android.html"><span class="visually-hidden">Скачать с play market</span></a>
-      <a href="windows.html"><span class="visually-hidden">Скачать с microsoft store</span></a>
-      <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-    </article>
+    <section class="welcome">
+      <h2 class="welcome__slogan">Взгляните на жизнь иначе!</h2>
+      <img class="welcome__main-image" src="img/iphone-hand-mobile@1x.png" width="258" height="286"
+        alt="Взгляните на жизнь иначе!">
+
+      <article class="download-app">
+        <h3 class="visually-hidden">Скачай приложение</h3>
+        <button class="download-app__download button">Скачать приложение</button>
+        <a href="appstore.html"><span class="visually-hidden">Скачать с appstore</span></a>
+        <a href="android.html"><span class="visually-hidden">Скачать с play market</span></a>
+        <a href="windows.html"><span class="visually-hidden">Скачать с microsoft store</span></a>
+        <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+      </article>
+    </section>
     <section class="advantages">
       <p class="advantages__slogan slogan-question">Устали от серости мегаполиса?
 
