--- a/source/index.html
+++ b/source/index.html
@@ -48,10 +48,7 @@
       </article>
     </section>
     <section class="advantages">
-      <p class="advantages__slogan slogan-question">Устали от серости мегаполиса?
-
-        Нам есть, что вам
-        предложить!</p>
+      <p class="advantages__slogan slogan-question">Устали от серости мегаполиса?</p>
       <p class="advantages__slogan slogan-answer">Нам есть, что вам предложить!</p>
       <h2 class="visually-hidden">Наши преимущества</h2>
       <ul class="advantages__list">
