--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
       <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
         alt="Пинк - раскрась серые будни!">
     </a>
-    <nav class="main-nav">
+    <nav class="page-header__nav main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
