Advantages slogan spans added, selector correction

--- a/source/index.html
+++ b/source/index.html
@@ -23,6 +23,10 @@
       </article>
     </section>
     <section class="advantages">
+      <p class="advantages__slogan">
+        <span class="advantages__slogan--question">Устали от серости мегаполиса?</span>
+        <span class="advantages__slogan--answer">Нам есть, что вам предложить!</span>
+      </p>
       <h2 class="visually-hidden">Наши преимущества</h2>
       <ul class="advantages__list">
       </ul>
