--- a/source/index.html
+++ b/source/index.html
@@ -29,6 +29,15 @@
       </p>
       <h2 class="visually-hidden">Наши преимущества</h2>
       <ul class="advantages__list">
+        <li class="advantages__item">
+
+        </li>
+        <li class="advantages__item">
+
+        </li>
+        <li class="advantages__item">
+
+        </li>
       </ul>
     </section>
     <section class="reviews">
