Advantages 1 item added

--- a/source/index.html
+++ b/source/index.html
@@ -38,6 +38,9 @@
         <li class="advantages__item">
 
         </li>
+        <li class="advantages__item">
+
+        </li>
       </ul>
     </section>
     <section class="reviews">
