--- a/source/photo.html
+++ b/source/photo.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Пинк</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
+  <title>Фотографии пользователей</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -20,100 +22,28 @@
   </header>
   <main class="page-main">
     <section class="user-photos">
-      <h1 class="user-photos__title">Фотографии пользователей</h1>
-      <p class="user-photos__subtitle">Взгляните на фотографии, которые выкладывают пользователи!
-        Видите, как не хватает ваших?</p>
+      <h1 class="user-photos__title"></h1>
+      <p class="user-photos__subtitle"></p>
       <ul class="user-photos__list">
         <li class="user-photos__item">
-          <p class="user-photos__author-picture">
-            <img class="user-photos__author-image user-photos__author-image--top" src="img/panorama-mobile@1x.jpg"
-              width="320" height="137" alt="Фото Анны">
-          </p>
-          <cite class="user-photos__author-name">Анна <span class="user-photos__time">(5 минут назад)</span></cite>
-          <p class="user-photos__text">
-            Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои
-            вопросы!</p>
-          <p class="user-photos__like">
-            Нравится: <span class="user-photos__like-value">215</span>
-          </p>
+
         </li>
         <li class="user-photos__item">
-          <p class="user-photos__author-picture">
-            <img class="user-photos__author-image" src="img/photo-car-mobile@1x.jpg" width="280" height="180"
-              alt="Фото Левона">
-          </p>
-          <cite class="user-photos__author-name">Левон <span class="user-photos__time">(5 часов назад)</span></cite>
-          <p class="user-photos__text">
-            Вчера он на луну летал, сегодня в руки к нам попал.
-          </p>
-          <p class="user-photos__like">
-            Нравится: <span class="user-photos__like-value">356</span>
-          </p>
+                  </li>
+        <li class="user-photos__item">
+
         </li>
         <li class="user-photos__item">
-          <p class="user-photos__author-picture">
-            <img class="user-photos__author-image" src="img/photo-drumset-mobile@1x.jpg" width="280" height="180"
-              alt="Фото Антона">
-          </p>
-          <cite class="user-photos__author-name">Антон <span class="user-photos__time">(12 часов назад)</span></cite>
-          <p class="user-photos__text">
-            Соседи будут рады!
-          </p>
-          <p class="user-photos__like">
-            Нравится: <span class="user-photos__like-value">666</span>
-          </p>
+
         </li>
         <li class="user-photos__item">
-          <p class="user-photos__author-picture">
-            <img class="user-photos__author-image" src="img/photo-window-mobile@1x.jpg" width="280" height="180"
-              alt="Фото Бориса">
-          </p>
-          <cite class="user-photos__author-name">Борис <span class="user-photos__time">(20 часов назад)</span></cite>
-          <p class="user-photos__text">
-            Здесь могла быть ваша цитата о высоком и вечном.
-          </p>
-          <p class="user-photos__like">
-            Нравится: <span class="user-photos__like-value">215</span>
-          </p>
+
         </li>
         <li class="user-photos__item">
-          <p class="user-photos__author-picture">
-            <img class="user-photos__author-image" src="img/photo-fair-mobile@1x.jpg" width="280" height="180"
-              alt="Фото Сергея">
-          </p>
-          <cite class="user-photos__author-name">Сергей <span class="user-photos__time">(25 часов назад)</span></cite>
-          <p class="user-photos__text">
-            Самая кубанская в мире!
-          </p>
-          <p class="user-photos__like">
-            Нравится: <span class="user-photos__like-value">4</span>
-          </p>
+
         </li>
         <li class="user-photos__item">
-          <p class="user-photos__author-picture">
-            <img class="user-photos__author-image" src="img/photo-pov-mobile@1x.jpg" width="280" height="180"
-              alt="Фото Максима">
-          </p>
-          <cite class="user-photos__author-name">Максим <span class="user-photos__time">(40 часов назад)</span></cite>
-          <p class="user-photos__text">
-            Где снег-то?
-          </p>
-          <p class="user-photos__like">
-            Нравится: <span class="user-photos__like-value">150</span>
-          </p>
-        </li>
-        <li class="user-photos__item">
-          <p class="user-photos__author-picture">
-            <img class="user-photos__author-image" src="img/photo-wing-mobile@1x.jpg" width="280" height="180"
-              alt="Фото Надежды">
-          </p>
-          <cite class="user-photos__author-name">Надежда <span class="user-photos__time">(45 часов назад)</span></cite>
-          <p class="user-photos__text">
-            Всем GM и взаимные лайки!
-          </p>
-          <p class="user-photos__like">
-            Нравится: <span class="user-photos__like-value">2560</span>
-          </p>
+
         </li>
       </ul>
     </section>
