Bg for grids added

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="body-index"> <!--grid temp-->
   <header class="page-header">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
     <a class="page-header__logo">
