--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="body-form">
 
   <header class="page-header">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
