--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,6 @@
 </head>
 
 <body class="body-form">
-
   <header class="page-header">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
     <a class="page-header__logo">
@@ -17,31 +16,13 @@
     </a>
     <nav class="page-header__nav main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <a>Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a href="photo.html">Фотографии</a>
-        </li>
-        <li class="site-list__item">
-          <a href="form.html">Конкурс</a>
-        </li>
-        <li class="site-list__item">
-          <a href="#">HTML Academy</a>
-        </li>
-      </ul>
     </nav>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Конкурс от Pink</h1>
-    <section class="intro">
-      <h2 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
-    </section>
     <section class="form">
-      <p class="form__text">
-        Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста,
-        заполните форму ниже:
+      <h2 class="form__title"></h2>
+      <p class="form__subtitle">
       </p>
       <!-- Форма -->
       <form action="https://echo.htmlacademy.ru" method="post">
@@ -90,7 +71,8 @@
           <label class="form__radio-label" for="windows-field">Windows Phone</label>
         </fieldset>
         <label class="form__text-label" for="emotions-area">Опишите свои эмоции</label>
-        <textarea class="form__emotions" placeholder="Можно прям в красках, не стесняясь в выражениях" id="emotions-area"></textarea>
+        <textarea class="form__emotions" placeholder="Можно прям в красках, не стесняясь в выражениях"
+          id="emotions-area"></textarea>
         <button class="form__button" type="submit">Отправить форму</button>
         <small class="form__notes"><sup>*</sup> — обязательные для заполнения поля</small>
       </form>
@@ -112,11 +94,12 @@
             YouTube</a>
         </li>
       </ul>
-      <div class="page-footer__copyright copyright">
-        <p class="copyright__text">Разработано:</p>
-        <a class="copyright__image" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
     </div>
+    <div class="page-footer__copyright copyright">
+      <p class="copyright__text">Разработано:</p>
+      <a class="copyright__image" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+    </div>
+
   </footer>
 </body>
 
