--- a/source/index.html
+++ b/source/index.html
@@ -9,12 +9,29 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="body-index"> <!--grid temp-->
+<body>
   <header class="page-header">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
     <a class="page-header__logo">
+      <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
+        alt="Пинк - раскрась серые будни!">
     </a>
     <nav class="page-header__nav main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a>Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="photo.html">Фотографии</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Конкурс</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">HTML Academy</a>
+        </li>
+      </ul>
     </nav>
   </header>
   <main class="page-main">
