--- a/source/index.html
+++ b/source/index.html
@@ -16,8 +16,8 @@
       <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
         alt="Пинк - раскрась серые будни!">
     </a>
+    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     <nav class="page-header__nav main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a>Главная</a>
