--- a/source/index.html
+++ b/source/index.html
@@ -11,13 +11,15 @@
 
 <body>
   <header class="page-header">
+    <div class="page-header__wrapper">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
-    <a class="page-header__logo">
+    <a class="page-header__logo page-header__logo--nav-closed">
       <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
         alt="Пинк - раскрась серые будни!">
     </a>
-    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-    <nav class="page-header__nav main-nav">
+
+    <nav class="main-nav min-nav--no-js main-nav--closed">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a>Главная</a>
@@ -33,6 +35,7 @@
         </li>
       </ul>
     </nav>
+    </div>
   </header>
   <main class="page-main">
     <section class="welcome">
@@ -142,7 +145,22 @@
       </div>
     </div>
   </footer>
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
 
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function () {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
 </body>
 
 </html>
