Nav menu non absolute

--- a/source/index.html
+++ b/source/index.html
@@ -11,14 +11,13 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__wrapper">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
     <a class="page-header__logo page-header__logo--nav-closed">
       <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
         alt="Пинк - раскрась серые будни!">
     </a>
 
-    <nav class="main-nav min-nav--no-js main-nav--closed">
+    <nav class="main-nav min-nav--no-js main-nav--opened">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
@@ -35,7 +34,7 @@
         </li>
       </ul>
     </nav>
-    </div>
+
   </header>
   <main class="page-main">
     <section class="welcome">
