Mobile bg logo created

--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,7 @@
   <header class="page-header">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
     <a class="page-header__logo page-header__logo--nav-closed">
-      <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
-        alt="Пинк - раскрась серые будни!">
+      <div class="page-header__logo-image"><span class="visually-hidden">Логотип сайта</span></div>
     </a>
 
     <nav class="main-nav min-nav--no-js main-nav--opened">
