--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,7 @@
 
       <article class="download-app">
         <h3 class="visually-hidden">Скачай приложение</h3>
-        <button class="download-app__download button">Скачать приложение</button>
+        <button class="download-app__download-button">Скачать приложение</button>
         <a href="appstore.html"><span class="visually-hidden">Скачать с appstore</span></a>
         <a href="android.html"><span class="visually-hidden">Скачать с play market</span></a>
         <a href="windows.html"><span class="visually-hidden">Скачать с microsoft store</span></a>
