Welcome mobile done

--- a/source/index.html
+++ b/source/index.html
@@ -44,9 +44,20 @@
       <article class="download-app">
         <h3 class="visually-hidden">Скачай приложение</h3>
         <button class="download-app__download-button">Скачать приложение</button>
-        <a href="appstore.html"><span class="visually-hidden">Скачать с appstore</span></a>
-        <a href="android.html"><span class="visually-hidden">Скачать с play market</span></a>
-        <a href="windows.html"><span class="visually-hidden">Скачать с microsoft store</span></a>
+        <ul class="download-app__list">
+          <li>
+            <a class="download-app__apple" href="appstore.html">
+              <span class="visually-hidden">Скачать с appstore</span></a>
+          </li>
+          <li>
+            <a class="download-app__android" href="android.html">
+              <span class="visually-hidden">Скачать с play market</span></a>
+          </li>
+          <li>
+            <a class="download-app__windows" href="windows.html">
+              <span class="visually-hidden">Скачать с microsoft store</span></a>
+          </li>
+        </ul>
         <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </article>
     </section>
