Welcome tablet done

--- a/source/index.html
+++ b/source/index.html
@@ -38,8 +38,7 @@
   <main class="page-main">
     <section class="welcome">
       <h2 class="welcome__slogan">Взгляните на жизнь иначе!</h2>
-      <img class="welcome__main-image" src="img/iphone-hand-mobile@1x.png" width="258" height="286"
-        alt="Взгляните на жизнь иначе!">
+      <div class="welcome__main-image"><span class="visually-hidden">Изображение телефона в руке</span></div>
 
       <article class="download-app">
         <h3 class="visually-hidden">Скачай приложение</h3>
