--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,11 @@
           <h3 class="advantages__title">Заводит новых друзей</h3>
           <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
             новых</p>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__title">Заводит новых друзей</h3>
+          <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
+            новых</p>
           <img class="advantages__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Отзывы">
         </li>
       </ul>
