Index mobile done

--- a/source/index.html
+++ b/source/index.html
@@ -82,13 +82,13 @@
           <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
             новых</p>
         </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title">Заводит новых друзей</h3>
-          <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
-            новых</p>
-          <img class="advantages__image" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Отзывы">
-        </li>
       </ul>
+      <p class="advantages__subtitle">
+        <h3>Эффект на 24 часа!</h3>
+        Британские ученые провели исследования и доказали, что положительный
+        эффект от использования приложения длится целые сутки!
+        <a href="#"> Узнать больше об исследовании</a>
+      </p>
     </section>
     <section class="reviews">
       <div class="reviews__wrapper slider">
