Advantages subtitle tablet started

--- a/source/index.html
+++ b/source/index.html
@@ -84,7 +84,7 @@
         </li>
       </ul>
       <p class="advantages__subtitle">
-        <h3>Эффект на 24 часа!</h3>
+        <b>Эффект <br> на 24 часа!</b>
         Британские ученые провели исследования и доказали, что положительный
         эффект от использования приложения длится целые сутки!
         <a href="#"> Узнать больше об исследовании</a>
