Advantages Subtitle tablet span

--- a/source/index.html
+++ b/source/index.html
@@ -85,8 +85,8 @@
       </ul>
       <p class="advantages__subtitle">
         <b>Эффект <br> на 24 часа!</b>
-        Британские ученые провели исследования и доказали, что положительный
-        эффект от использования приложения длится целые сутки!
+        <span>Британские ученые провели исследования и доказали, что положительный
+          эффект от использования приложения длится целые сутки!</span>
         <a href="#"> Узнать больше об исследовании</a>
       </p>
     </section>
