Nav bg color toggle added

--- a/source/photo.html
+++ b/source/photo.html
@@ -12,7 +12,7 @@
 <body>
   <header class="page-header">
     <h2 class="visually-hidden">Мобильное приложение Пинк</h2>
-    <a class="page-header__logo page-header__logo--nav-closed">
+    <a class="page-header__logo page-header__logo--nav-opened">
       <div class="page-header__logo-image"><span class="visually-hidden">Логотип сайта</span></div>
     </a>
 
@@ -213,6 +213,7 @@
   <script>
     var navMain = document.querySelector('.main-nav');
     var navToggle = document.querySelector('.main-nav__toggle');
+    var logoToggle = document.querySelector('.page-header__logo');
 
     navMain.classList.remove('main-nav--nojs');
 
@@ -220,9 +221,13 @@
       if (navMain.classList.contains('main-nav--closed')) {
         navMain.classList.remove('main-nav--closed');
         navMain.classList.add('main-nav--opened');
+        logoToggle.classList.remove('page-header__logo--nav-closed');
+        logoToggle.classList.add('page-header__logo--nav-opened');
       } else {
         navMain.classList.add('main-nav--closed');
         navMain.classList.remove('main-nav--opened');
+        logoToggle.classList.remove('page-header__logo--nav-opened');
+        logoToggle.classList.add('page-header__logo--nav-closed');
       }
     });
   </script>
