--- a/source/form.html
+++ b/source/form.html
@@ -18,13 +18,13 @@
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
-          <a>Главная</a>
+          <a href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
           <a href="photo.html">Фотографии</a>
         </li>
-        <li class="site-list__item">
-          <a href="form.html">Конкурс</a>
+        <li class="site-list__item site-list__item--current">
+          <a>Конкурс</a>
         </li>
         <li class="site-list__item">
           <a href="#">HTML Academy</a>
