--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
     <nav class="main-nav min-nav--no-js main-nav--opened">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--current">
+        <li class="site-list__item">
           <a>Главная</a>
         </li>
         <li class="site-list__item">
