Photos grid done

--- a/source/photo.html
+++ b/source/photo.html
@@ -38,7 +38,7 @@
   <main class="page-main">
     <section class="user-photos">
       <h1 class="user-photos__title">Фотографии пользователей</h1>
-      <p class="user-photos__subtitle">Взгляните на фотографии, которые выкладывают пользователи!
+      <p class="user-photos__subtitle">Взгляните на фотографии, которые выкладывают пользователи!<br>
         Видите, как не хватает ваших?</p>
       <ul class="user-photos__list">
         <li class="user-photos__item">
